--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="classf">#FF7043</color>
     <color name="gray">#F5F5F5</color>
     <color name="article_background">#CCCCCC</color>
+    <color name="nomarl_divider">#F0F0F2</color>
 </resources>
