--- a/app/src/main/res/layout/information_article_item.xml
+++ b/app/src/main/res/layout/information_article_item.xml
@@ -35,8 +35,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_margin="15dp"
+            android:layout_margin="10dp"
             android:textColor="@color/nomarl_text_color"
+            android:maxLength="4"
             android:text="有范儿"
             />
         <TextView
@@ -57,8 +58,8 @@
             android:text="100"
             android:drawableRight="@drawable/ic_eye"
             android:layout_alignTop="@+id/information_article_ietm_time"
-            android:layout_marginRight="10dp"
-            android:drawablePadding="5dp"
+            android:layout_marginRight="5dp"
+            android:drawablePadding="2dp"
             android:layout_alignParentRight="true"/>
 
     </RelativeLayout>
