--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -25,7 +25,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_margin="@dimen/ten_dp"
-            android:src="@mipmap/email2" />
+            android:src="@drawable/ic_phone_g" />
 
         <EditText
             android:id="@+id/et_phone"
