--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -8,4 +8,11 @@
         android:layout_centerInParent="true"
         android:text="@string/str_photo"
         />
+
+    <com.android.lala.view.CircleImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_centerInParent="true"
+        android:src="@drawable/ic_search2"
+        android:background="@color/nomarl_text_color"/>
 </RelativeLayout>
