--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="tolbar_color">#555555</color>
     <color name="nomarl_text_color">#A7A7A7</color>
     <color name="white_color">@android:color/white</color>
     <color name="forget_pwd_color">#FF7043</color>
