--- a/app/src/main/res/layout/activity_updatehead.xml
+++ b/app/src/main/res/layout/activity_updatehead.xml
@@ -3,6 +3,15 @@
     android:background="@color/black"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <Button
+        android:id="@+id/save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:textColor="@color/white"
+        android:background="@null"
+        android:visibility="gone"
+        android:text="保存"/>
     <ImageView
         android:id="@+id/updatehead"
         android:layout_width="match_parent"
@@ -23,6 +32,7 @@
         android:layout_width="300dp"
         android:layout_height="30dp"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         android:background="@drawable/getcode_shape"
