--- a/app/src/main/res/layout/activity_updatename.xml
+++ b/app/src/main/res/layout/activity_updatename.xml
@@ -10,7 +10,13 @@
         android:layout_height="60dp"
         android:layout_margin="10dp"
         android:paddingLeft="10dp"
-        android:hint="布鲁斯"
+        android:textColor="@color/nomarl_title_color"
         />
+    <Button
+        android:id="@+id/updatename_comit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:text="完成"/>
 
 </LinearLayout>
