--- a/app/src/main/res/layout/item_article_comment.xml
+++ b/app/src/main/res/layout/item_article_comment.xml
@@ -30,6 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
+            android:textColor="@color/nomarl_title_color"
             android:text="米优酱"/>
 
         <TextView
@@ -44,6 +45,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="40dp">
 
@@ -51,20 +53,21 @@
             android:id="@+id/article_comment_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/tolbar_color"
-            android:text="这家店不错哦 我去过 很好吃的"/>
+            android:textColor="@color/nomarl_title_color"
+            android:layout_marginRight="60dp"
+            android:text="这家店不错哦 我去过 很好吃的这家店不错哦 我去过 很好吃的"/>
 
         <TextView
             android:id="@+id/article_comment_zannum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
             android:text="20"
             android:layout_alignParentRight="true"
             android:drawablePadding="5dp"
             android:drawableLeft="@drawable/ic_zan"/>
 
     </RelativeLayout>
-
 
 
 
