--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".home.MainActivity">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
     <FrameLayout
         android:id="@+id/fl_content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_alignParentTop="true"
         android:layout_weight="1"/>
     <RadioGroup
         android:id="@+id/rg_tabs"
@@ -32,14 +36,10 @@
             android:drawableTop="@drawable/tab_list_btn"
             android:text="市集" />
 
-        <RadioButton
-            android:id="@+id/rb_photo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/ic_photo"
-            android:layout_gravity="center"
-            android:button="@null"
-            android:text="@null" />
+        <ImageView
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
 
         <RadioButton
             android:id="@+id/rb_circle"
@@ -54,6 +54,19 @@
             android:drawableTop="@drawable/tab_my_btn"
             android:text="我的" />
     </RadioGroup>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center|top"
+        android:layout_alignParentBottom="true">
+        <ImageView
+            android:id="@+id/rb_photo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_photo"/>
+    </LinearLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
