--- a/app/src/main/res/layout/activity_searcharticle.xml
+++ b/app/src/main/res/layout/activity_searcharticle.xml
@@ -29,9 +29,11 @@
             android:text="取消"/>
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/search_info"
         android:layout_width="match_parent"
         android:layout_height="35dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
@@ -42,12 +44,12 @@
             android:textColor="@color/black"
             android:text="文章"/>
         <TextView
+            android:id="@+id/search_num"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_gravity="center"
-            android:textColor="@color/black"
-            android:text="(10条搜索结果)"/>
+            android:textColor="@color/black" />
 
     </LinearLayout>
 
