--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="article_background">#CCCCCC</color>
     <color name="nomarl_divider">#F0F0F2</color>
     <color name="nomarl_title_color">#181818</color>
+    <color name="article_bg">#FAFAFA</color>
 </resources>
