--- a/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_leaderboard.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/market_scrollview"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
         <LinearLayout
             android:layout_width="match_parent"
@@ -157,6 +158,7 @@
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/newrecycle"
+                android:focusable="false"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
             <TextView
@@ -201,6 +203,7 @@
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/oldrecycleview"
+                    android:focusable="false"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"/>
 </LinearLayout>
